feat: add API docs page and chat history read endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <p class="eyebrow">Baileys Multi-API</p>
         <h1>WhatsApp API Dashboard</h1>
         <p class="subtitle">Create sessions, scan QR codes, and send messages from one place.</p>
+        <p class="subtitle"><a class="doc-link" href="/api-docs.html">Open Full API Docs</a></p>
       </div>
       <div class="status-pill" id="serverStatus">Checking server…</div>
     </header>
